--- a/locales/zh-CN/mark.yaml
+++ b/locales/zh-CN/mark.yaml
@@ -91,7 +91,7 @@ mark_dongshang:
 mark_zhongdu:
   name: 中毒
   description: 每回合失去最大体力的1/8 恢复量降低15%
-mark_liuxue:
+mark_liuxie:
   name: 流血
   description: 回合结束时受到{{mark.stack}}点伤害
 mark_exin:
