--- a/locales/zh-CN/species.yaml
+++ b/locales/zh-CN/species.yaml
@@ -24,4 +24,4 @@ pet_laaomiao:
   description: 经常和对手战斗完也会帮它恢复体力以示友善
 pet_laaoye:
   name: 拉奥叶
-  description:
+  description: 对自己关心很少 有时只顾着帮助别的精灵忘记自己受了重伤
