--- a/locales/zh-CN/species.yaml
+++ b/locales/zh-CN/species.yaml
@@ -25,3 +25,12 @@ pet_laaomiao:
 pet_laaoye:
   name: 拉奥叶
   description: 对自己关心很少 有时只顾着帮助别的精灵忘记自己受了重伤
+pet_fala:
+  name: 法拉
+  description: 当有部落居民的时候 法拉就已在阿卡迪亚星球生活了很久很久
+pet_fana:
+  name: 法娜
+  description: 温顺的法娜从不主动靠近人类 它只是远远地看着世界的变化
+pet_fayina:
+  name: 法伊娜
+  description: 在寂静的星空里 似乎有法伊娜信奉的力量
