--- a/locales/zh-CN/mark_ability.yaml
+++ b/locales/zh-CN/mark_ability.yaml
@@ -19,3 +19,6 @@ mark_ability_zhongya:
 mark_ability_jianqiang:
   name: 坚强
   description: 体力低于1/4以下时受到物理伤害减少30%
+mark_ability_liushui:
+  name: 流水
+  description: 体力低于1/4以下时水系技能造成的伤害增加25%
