--- a/locales/zh-CN/mark_ability.yaml
+++ b/locales/zh-CN/mark_ability.yaml
@@ -25,3 +25,6 @@ mark_ability_liushui:
 mark_ability_duyao:
   name: 毒药
   description: 对手慢性毒药时自身伤害增加10%
+mark_ability_kongqi:
+  name: 空气
+  description: 具有空气值时伤害提升10%且水系技能命中率提高5%
