--- a/locales/zh-CN/skill.yaml
+++ b/locales/zh-CN/skill.yaml
@@ -489,3 +489,45 @@ skill_luoxuanshuiqiang:
 skill_kongqizhiyu:
   name: 空气治愈
   description: 恢复自身最大体力的1/8 额外恢复空气值的体力
+skill_fengli:
+  name: 锋利
+  description: 强化自身物攻1级
+skill_quanlichongzhuang:
+  name: 全力冲撞
+  description: 连续命中时减少10点威力 最多20点
+skill_xingzhiwei:
+  name: 星之尾
+  description: 无视对手[02CAC9]护盾[-]
+skill_yingjiachongding:
+  name: 硬甲冲顶
+  description: 连续命中时使自身获得10点受伤增加 最多20点
+skill_pen sheshuizhu:
+  name: 喷射水柱
+  description: 先制+1
+skill_weishe:
+  name: 威慑
+  description: 【50】使对手害怕
+skill_shuangxingzhiwei:
+  name: 双星之尾
+  description: 连击2次 无视对手[02CAC9]护盾[-]
+skill_fengkuanglianchong:
+  name: 疯狂连冲
+  description: 【90】连击3次 连续命中时连击数-1 最多2次
+skill_bomingyiji:
+  name: 搏命一击
+  description: 【💀自身承受25%的自损伤害】
+skill_nuhailiantao:
+  name: 怒海连涛
+  description: '[93E312]必中[-] 连击5次'
+skill_talangchongji:
+  name: 踏浪冲击
+  description: 连续命中时造成伤害减少10% 最多2次
+skill_xingzhili:
+  name: 星之力
+  description: 使自身获得星之力
+skill_sisui:
+  name: 撕碎
+  description: 【95】弱化对手双防1级
+skill_yongbuyanbai:
+  name: 永不言败
+  description: 恢复自身最大体力的1/4并解除自身弱化
