--- a/locales/zh-CN/species.yaml
+++ b/locales/zh-CN/species.yaml
@@ -79,3 +79,9 @@ pet_anya:
 pet_anmiya:
   name: 安迷亚
   description: 强大的安迷亚让呼吸罩成为了它最强的防护和能量来源
+pet_lanmiao:
+  name: 蓝喵
+  description: 最大胆妄为的蓝喵敢用坚硬的脑袋去冲撞任何物体
+pet_lanhujing:
+  name: 蓝虎鲸
+  description: 蓝虎鲸最大的目标就是撞破阿卡纳斯的水纹护盾
