--- a/locales/zh-CN/mark_emblem.yaml
+++ b/locales/zh-CN/mark_emblem.yaml
@@ -34,3 +34,9 @@ mark_emblem_xingzhi:
 mark_emblem_zhenji:
   name: 震击
   description: 水纹震击提升的致命几率再增加5%
+mark_emblem_yiran:
+  name: 易燃
+  description: 增加1回合烧伤持续时间
+mark_emblem_xuanyun:
+  name: 眩晕
+  description: 增加1回合眩晕持续时间
